@@ -73,6 +73,7 @@ print_usage(const char* name, bool error)
 	fprintf(os, "  -s INPUT     Parse INPUT as string.\n");
 	fprintf(os, "  -t           Write terser output without newlines.\n");
 	fprintf(os, "  -v           Display version information and exit.\n");
+	fprintf(os, "  -x           Support parsing variable nodes like `?x'.\n");
 	return error ? 1 : 0;
 }
 
@@ -187,6 +188,8 @@ main(int argc, char** argv)
 			quiet = true;
 		} else if (argv[a][1] == 'v') {
 			return print_version();
+		} else if (argv[a][1] == 'x') {
+			reader_flags |= SERD_READ_VARIABLES;
 		} else if (argv[a][1] == 's') {
 			if (++a == argc) {
 				return missing_arg(argv[0], 's');
