@@ -1,0 +1,2 @@
+?s
+	<http://example.org/p> <http://example.org/o> .
