@@ -1,0 +1,35 @@
+@prefix mf: <http://www.w3.org/2001/sw/DataAccess/tests/test-manifest#> .
+@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
+@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
+@prefix rdft: <http://www.w3.org/ns/rdftest#> .
+
+<>
+	rdf:type mf:Manifest ;
+	rdfs:comment "Serd pattern syntax test cases" ;
+	mf:entries (
+		<#bad-pattern-nq>
+		<#bad-pattern-ttl>
+		<#test-pattern-nt>
+		<#test-pattern-ttl>
+	) .
+
+<#bad-pattern-nq>
+	rdf:type rdft:TestNQuadsNegativeSyntax ;
+	mf:name "bad-pattern-nq" ;
+	mf:action <bad-pattern.nq> .
+
+<#bad-pattern-ttl>
+	rdf:type rdft:TestTurtleNegativeSyntax ;
+	mf:name "bad-pattern" ;
+	mf:action <bad-pattern.ttl> .
+
+<#test-pattern-nt>
+	rdf:type rdft:TestNTriplesPositiveSyntax ;
+	mf:name "test-pattern-nt" ;
+	mf:action <test-pattern.nt> .
+
+<#test-pattern-ttl>
+	rdf:type rdft:TestTurtleEval ;
+	mf:name "test-pattern" ;
+	mf:action <test-pattern.ttl> ;
+	mf:result <test-pattern.nt> .
